--- a/task_manager/templates/tasks.html
+++ b/task_manager/templates/tasks.html
@@ -1,24 +1,24 @@
 <h1>Task Management Application</h1>
 
-<form action="add-task" method="get">
-  <input type="text" name="task">
-  <button type="submit">Add Task</button>
-</form>
-
 <h2>Search Tasks</h2>
 
 <form action="" method="get">
-  <input type="text" name="search">
+  <input type="text" name="search" />
   <button type="submit">Submit</button>
 </form>
 
 <h1>Tasks</h1>
 
-{% for task in tasks %}
- {{forloop.counter}} . {{task.title}} - {{task.created_date}}
-<a href="delete-task/{{task.id}}">delete task</a><br>
+{% for task in tasks %} {{forloop.counter}} . {{task.title}} -
+{{task.created_date}}
+<a href="/delete-task/{{task.id}}">delete task</a>&nbsp;
+<a href="/detail-task/{{task.id}}">details of task</a>&nbsp;
+<a href="/update-task/{{task.id}}">update task</a>&nbsp; <br />
+{% endfor %} {% for page in paginator.page_range %}
+<li>
+  <a href="?page={{page}}&search={{request.GET.search}}">{{page}}</a>
+</li>
 {% endfor %}
-
 <!-- 
 <head>
     <script src="https://cdn.tailwindcss.com"></script>
