--- a/GDC-Level-6-Milestone-master/templates/user_auth_form.html
+++ b/GDC-Level-6-Milestone-master/templates/user_auth_form.html
@@ -6,11 +6,12 @@
     <form action="" method="post">
         {% for field in form %}
             <div class="px-[9px] py-[11px]">
-                {{ field.errors }}
                 <label for="{{field.id_for_label}}" class="text-[18px]">{{ field.label_tag }}</label>
                 <div class="h-[6px]"></div>
                 {{ field }}
-                {% if field.help_text %}<p class="help">{{ field.help_text|safe }}</p>{% endif %}
+                {% for error in field.errors %}
+                    <p class="m-2 text-[14px] text-red-500 w-[382px]">{{error}}</p>
+                {% endfor %}
             </div>
         {% endfor %}
         
